// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform invalid closing of tag 1`] = `
"
    was [myColor=red]test [bold]wd xad</color>
    [/bold][/myColor]"
`;

exports[`transform multiline 1`] = `
"
    [myColor=red]
    title - text

    -a --abc - [bold]description[/bold]
    -a --abc - [bold]description[/bold]
    -a --abc - [bold]description[/bold]
    -a --abc - [bold]description[/bold]
    [/myColor]
    "
`;

exports[`transform simple 1`] = `
"
    was [myColor=red]test [myColor=blue][underline][bold]wd[/bold][/underline][/myColor] xad
    [/myColor]"
`;

exports[`transform style without value 1`] = `
"
    was test
    "
`;

exports[`transform two top level tags 1`] = `
"
    was [myColor=red]test[/myColor] [myColor=blue][bold]wd xad
    [/bold][/myColor]"
`;

exports[`transform two top level tags with inner styles 1`] = `
"
    was [myColor=red]te[underline]st[/underline][/myColor] [myColor=blue][bold]wd xad
    [/bold][/myColor]"
`;

exports[`transform unknown tags 1`] = `
"
    was [myColor=red]test <unknown>wd xad
    [/myColor]"
`;

exports[`transform without close tags 1`] = `
"
    was [myColor=red]test [myColor=blue][underline][bold]wd xad
    [/bold][/underline][/myColor][/myColor]"
`;
